--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/f767761c57.js" crossorigin="anonymous"></script>
     <!-- style sheet -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -43,6 +45,123 @@
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
                         <h3 class="player-name">Mujahid</h3>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="top-blogs">
+                <h2 class="section-title">Top Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbniles">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbniles">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">UI cheat sheet: list vs grids</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbniles">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">7 typography tips for interface design</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbniles">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">Your logo is copied</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+<!-- latest courses -->
+        <section class="container">
+            <h2 class="section-title">Latest Courses</h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="courses-banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-info">
+                        <h3 class="course-title">React - The Complete Guide 2020</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-rating">
+                            <div>
+                                <i class="fa-solid fa-star golden-color"></i>
+                                <i class="fa-solid fa-star golden-color"></i>
+                                <i class="fa-solid fa-star golden-color"></i>
+                                <i class="fa-solid fa-star golden-color"></i>
+                                <i class="fa-solid fa-star gray-color"></i>
+                            </div>
+                            <div>4.5</div>
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                01.30hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="courses-banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-info">
+                        <h3 class="course-title">Powerpoint 2020 Master Powerpoint Cour</h3>
+                        <p class="course-author">Walter Scott.</p>
+                        <div class="course-rating">
+                            <div>
+                                <i class="fa-solid fa-star golden-color"></i>
+                                <i class="fa-solid fa-star golden-color"></i>
+                                <i class="fa-solid fa-star golden-color"></i>
+                                <i class="fa-solid fa-star golden-color"></i>
+                                <i class="fa-solid fa-star gray-color"></i>
+                            </div>
+                            <div>4.3</div>
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                01.20hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="courses-banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-info">
+                        <h3 class="course-title">The Complete JavaScript Course 2020</h3>
+                        <p class="course-author">Reed Krakoff..</p>
+                        <div class="course-rating">
+                            <div>
+                                <i class="fa-solid fa-star golden-color"></i>
+                                <i class="fa-solid fa-star golden-color"></i>
+                                <i class="fa-solid fa-star golden-color"></i>
+                                <i class="fa-solid fa-star golden-color"></i>
+                                <i class="fa-solid fa-star gray-color"></i>
+                            </div>
+                            <div>4.5</div>
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                01.30hr
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
