--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- header start -->
     <header>
-
+        
     </header>
     <!-- header end -->
     <main>
@@ -110,10 +110,10 @@
                                 <i class="fa-solid fa-star golden-color"></i>
                                 <i class="fa-solid fa-star gray-color"></i>
                             </div>
-                            <div>4.5</div>
+                            <div class="rating-point">4.5</div>
                             <div class="course-duration">
                                 <i class="fa-regular fa-clock"></i>
-                                01.30hr
+                                01:30 hr
                             </div>
                         </div>
                     </div>
@@ -133,10 +133,10 @@
                                 <i class="fa-solid fa-star golden-color"></i>
                                 <i class="fa-solid fa-star gray-color"></i>
                             </div>
-                            <div>4.3</div>
+                            <div class="rating-point">4.3</div>
                             <div class="course-duration">
                                 <i class="fa-regular fa-clock"></i>
-                                01.20hr
+                                01:20 hr
                             </div>
                         </div>
                     </div>
@@ -156,10 +156,10 @@
                                 <i class="fa-solid fa-star golden-color"></i>
                                 <i class="fa-solid fa-star gray-color"></i>
                             </div>
-                            <div>4.5</div>
+                            <div class="rating-point">4.5</div>
                             <div class="course-duration">
                                 <i class="fa-regular fa-clock"></i>
-                                01.30hr
+                                01:30 hr
                             </div>
                         </div>
                     </div>
